# CXXServer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
include/: CXXServer.hpp  Handler.hpp  Request.hpp  Server.hpp  utils.hpp
src/: handler.cpp  main.cpp  request.cpp  server.cpp  utils.cpp
src/libcxxserver/: Cookies.cpp  Handler.cpp  Headers.cpp  Request.cpp  Response.cpp  Server.cpp  utils.cpp
src/libcxxserver/include/: Cookies.h  Handler.h  Headers.h  Request.h  Response.h  Server.h  cxxserver.h  utils.h
